--- a/Weather_info.ipynb
+++ b/Weather_info.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "id": "5f27a9a1-9abe-423b-a587-e479b78062e3",
    "metadata": {
     "tags": []
@@ -23,6 +23,27 @@
    "outputs": [],
    "source": [
     "def get_weather_info(api_key, city):\n",
+    "    \"\"\"\n",
+    "    Retrieve weather information for a given city using the WeatherAPI.\n",
+    "\n",
+    "    Args:\n",
+    "    - api_key (str): The API key for accessing the WeatherAPI.\n",
+    "    - city (str): The name of the city for which weather information is requested.\n",
+    "\n",
+    "    Returns:\n",
+    "    - dict: A dictionary containing weather information for the specified city, including:\n",
+    "        - Location: The name and country of the location.\n",
+    "        - Local time: The local time at the location.\n",
+    "        - Temperature: The current temperature in Celsius.\n",
+    "        - Feels like: The \"feels like\" temperature in Celsius.\n",
+    "        - Wind speed: The wind speed in kilometers per hour.\n",
+    "        - Humidity: The humidity percentage.\n",
+    "        - Visibility: The visibility in kilometers.\n",
+    "        - Last Updated: The timestamp when the weather information was last updated.\n",
+    "\n",
+    "    If the city is not found or there is an error in retrieving the weather information,\n",
+    "    the function returns a dictionary with an 'error' key and an appropriate error message.\n",
+    "    \"\"\"\n",
     "    payload = {'key': api_key, 'q': city}\n",
     "    try:\n",
     "        r = requests.get('https://api.weatherapi.com/v1/current.json?', params=payload)\n",
@@ -45,14 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "d6c1d302-3b49-4d4f-b9ed-ad844df241b2",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "api_key = ''"
+    "api_key = ''  # Provide your WeatherAPI key here"
    ]
   },
   {
